# HA-Snap7

./: .gitattributes  .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml
custom_components/s7_plc/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  models.py  number.py  parser.py  plc_client.py  read_planner.py  sensor.py  services.yaml  strings.json  switch.py  writer.py  yaml_loader.py
examples/: plc_tags.example.yaml
tests/: __init__.py  test_parser.py  test_read_planner.py  test_writer.py  test_yaml_loader.py
tools/: live_read.py  live_write.py  make_icon.py
