[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "home-assistant-s7-plc"
version = "0.1.0"
description = "Home Assistant custom integration for reading Siemens S7 PLC tags via python-snap7"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wagenaar Engineering" }]
dependencies = ["python-snap7==3.0.0"]

[project.optional-dependencies]
test = ["pytest>=7.4", "pyyaml>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
